modules/cli/src/test/resources/bad/syntax/disamb/doarglistdel/DoArgList05.scr
module bad.syntax.disamb.doarglist.DoArgList05;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do Bar<2()>(A, B);
}

global protocol Bar(role C, role D)
{
	2() from C to D;
}
